Update thesis paper

--- a/LaTeX/thesis-template-master/bibliography.bib
+++ b/LaTeX/thesis-template-master/bibliography.bib
@@ -183,3 +183,31 @@
 	year={2007},
 	publisher={Julius Smith}
 }
+
+@article{knn_python,
+	title = {K-Nearest Neighbors Algorithm Using Python},
+	year = 2019,
+	Url = "https://www.edureka.co/blog/k-nearest-neighbors-algorithm/",
+	author = Atul
+	}
+	
+@article{confusion_matrix,
+	title = {Simple guide to confusion matrix terminology},
+	year = 2014,
+	Url = "https://www.dataschool.io/simple-guide-to-confusion-matrix-terminology/",
+	author = DataSchool
+	}
+	
+@article{gradient_descent,
+	title = {Gradient descent},
+	year = 2017,
+	Url = "https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html",
+	author = {ML Cheatsheet}
+	}	
+		
+@article{finite_difference_method,
+	title = {Finite Difference Method},
+	year = 2019,
+	Url = "http://www.scholarpedia.org/article/Finite_difference_method",
+	author = {Finite difference method}
+	}
