Thesis report updates

--- a/LaTeX/thesis-template-master/bibliography.bib
+++ b/LaTeX/thesis-template-master/bibliography.bib
@@ -81,15 +81,7 @@
 	author = "Edward Malnick, Robert Mendick",
 	Url = "https://www.telegraph.co.uk/news/uknews/8948363/1500-accidents-and-incidents-on-UK-wind-farms.html"
 	}
-	
-@article{UK_turbine_failures,
-	title = {Wind Turbine Failures - Tackling current problems in Failure Datra Analysis},
-	year = "2016",
-	Journal = "Journal of Physics: Conference Series",
-	author = "M. D. Reder",
-	Url = "http://iopscience.iop.org/article/10.1088/1742-6596/753/7/072027/pdf"
-	}
-	
+
 @article{NSET_vibration_modeling,
 	title = {Wind Turbine Tower Vibration Modeling and Monitoring by the Nonlinear State Estimation Technique (NSET)},
 	year = "2012",
@@ -174,7 +166,6 @@
 	Url = "https://www.st.com/content/ccc/resource/technical/document/application_note/10/6b/dc/ea/5b/6e/47/46/DM00047230.pdf/files/DM00047230.pdf/jcr:content/translations/en.DM00047230.pdf",
 	author = ST
 	}
-
 	
 @book{butter_filter_design,
 	title={Introduction to digital filters: with audio applications},
@@ -211,3 +202,25 @@
 	Url = "http://www.scholarpedia.org/article/Finite_difference_method",
 	author = {Finite difference method}
 	}
+
+@article{wind_turbine_accidents,
+	author = {Asian, Sean and Ertek, Gurdal and Haksoz, Cagri and Pakter, Sena and Ulun,, Soner},
+	year = {2017},
+	month = {09},
+	pages = {1567-1578},
+	title = {Wind Turbine Accidents: A Data Mining Study},
+	volume = {11},
+	journal = {IEEE Systems Journal},
+	doi = {10.1109/JSYST.2016.2565818}
+}	
+
+@book{numerical_fmin_cg,
+	title={Numerical Optimization},
+	author={Nocedal, J. and Wright, S.},
+	isbn={9780387303031},
+	lccn={99013263},
+	series={Springer Series in Operations Research and Financial Engineering},
+	url={https://books.google.com/books?id=eNlPAAAAMAAJ},
+	year={2006},
+	publisher={Springer New York}
+}
