update report with conclusion

--- a/LaTeX/thesis-template-master/bibliography.bib
+++ b/LaTeX/thesis-template-master/bibliography.bib
@@ -224,3 +224,24 @@
 	year={2006},
 	publisher={Springer New York}
 }
+
+@article{mnist_deep_learning,
+	author = {Rajat},
+	year = {2018},
+	title = {MNIST vs MNIST},
+	url = "https://medium.com/@rgrgrajat1/mnist-vs-mnist-how-i-was-able-to-speed-up-my-deep-learning-11c0787e6935"
+}	
+
+@article{keras,
+	author = {Keras},
+	year = {2019},
+	title = {Keras},
+	url = "https://keras.io/"
+}	
+
+@article{tensorflow,
+	author = {Google},
+	year = {2019},
+	title = {TensorFlow},
+	url = "https://www.tensorflow.org/"
+}	
