--- a/LaTeX/thesis-template-master/chapter-outline.tex
+++ b/LaTeX/thesis-template-master/chapter-outline.tex
@@ -2,3 +2,4 @@
 \include{chapters/ch_math_model}
 \include{chapters/ch_dsp_model}
 \include{chapters/ch_detection_algorithm}
+\include{chapters/ch_conclusion}
