--- a/LaTeX/thesis-template-master/bibliography.bib
+++ b/LaTeX/thesis-template-master/bibliography.bib
@@ -1,70 +1,75 @@
 @article{Gwon_paper,
-	Title = {Structural Analyses of Wind Turbine Tower for 3 kW Horizontal-Axis Wind Turbine},
-	Author = {Gwon, Tom},
-	Journal = {California Polytechnic State University, SLO},
-	Year = {2011}
-	}
+	title={Structural Analyses of Wind Turbine Tower for 3 kW Horizontal-Axis Wind Turbine},
+	author={Gwon, Tae-gyun},
+	journal={Cal Poly Masters thesis},
+	year={2011}
+}
 
 @article{cantilever_beam_ref,
-	Title = {Deflections and Stresses in Circular Tapered Beams and Poles},
-	Author = {McCutcheon, William},
-	Year = {1983},
-	Journal = {Civil Engineering for Practicing and Design Engineers}
-	}
+	title={Deflections and stresses in circular tapered beams and poles},
+	author={McCutcheon, William J},
+	journal={Civ. Eng. Pract. Des. Eng},
+	volume={2},
+	year={1983}
+}
 
-@article{LIA_fig,
-	title = {Lock-in Amplifier and Applications},
-	year = {2011},
-	Url = "http://www.lehigh.edu/~jph7/website/Physics262/LockInAmplifierAndApplications.pdf"
-	}
+@book{LIA_applications,
+	title={Lock-in amplifiers: principles and applications},
+	author={Meade, Mike L},
+	number={1},
+	year={1983},
+	publisher={Mike Meade}
+}
 
 @article{LIA_document,
 	title = {About Lock-In Amplifiers},
 	Journal = {thinkSRS},
 	year = {2017},
 	Url = "https://www.thinksrs.com/downloads/pdfs/applicationnotes/AboutLIAs.pdf"
-	}
+}
 	
 @article{envelope_detector_ref,
 	title = {Envelope Detection},
 	Journal = {MathWorks},
 	year = "2018",
 	Url = "https://www.mathworks.com/help/dsp/examples/envelope-detection.html"
-	}
+}
 	
 @misc{zoom_fft_ref,
 	title = {Zoom FFT},
 	Journal = "Miscellany",
 	author = "Dr. A. R. Collins",
 	Url = "https://www.arc.id.au/ZoomFFT.html"
-	}
+}
 
 @misc{wiki:IIR_block_diagram,
-    title = {Wikipedia: Infinite Impulse Response},
-    year = "2018",
-    howpublished = "\url{https://en.wikipedia.org/wiki/Infinite_impulse_response}",
-  }
-	
+	author = "{Wikipedia contributors}",
+	title = "Infinite Impulse Response --- {W}ikipedia{,} The Free Encyclopedia",
+	year = "2018",
+	url = "https://en.wikipedia.org/wiki/Infinite_impulse_response",
+}
+
 @misc{wiki:FIR_block_diagram,
-    title = {Wikipedia: Finite Impuse Response},
-    year = "2018",
-    howpublished = "\url{https://en.wikipedia.org/wiki/Finite_impulse_response}",
-  }
-  
+	author = "{Wikipedia contributors}",
+	title = "Finite Impulse Response --- {W}ikipedia{,} The Free Encyclopedia",
+	year = "2018",
+	url = "https://en.wikipedia.org/wiki/Finite_impulse_response",
+}
+
 @article{SG_filter,
-    title = {Savitzky-Golay Smoothing Filters},
-    year = "1990",
-    Journal = "American Institute of Physics",
-    Author = {William H. Press and Saul A. Teukolsky},
-    Url = "https://aip.scitation.org/doi/pdf/10.1063/1.4822961",
-  }
+	title = {Savitzky-Golay Smoothing Filters},
+	year = "1990",
+	Journal = "American Institute of Physics",
+	Author = {William H. Press and Saul A. Teukolsky},
+	Url = "https://aip.scitation.org/doi/pdf/10.1063/1.4822961",
+}
   
 @article{k_NN_algorithm,
-    title = {K-nearest neighbors},
-    year = "2009",
-    Journal = "Scholarpedia",
-    Url = "http://www.scholarpedia.org/article/K-nearest_neighbor"
-    }
+	title = {K-nearest neighbors},
+	year = "2009",
+	Journal = "Scholarpedia",
+	Url = "http://www.scholarpedia.org/article/K-nearest_neighbor"
+}
   
 @article{decimation_ref,
 	title = {Decimation},
@@ -72,7 +77,7 @@
 	Journal = "dspGuru",
 	author = "Iowegian International",
 	Url = "https://dspguru.com/dsp/faqs/multirate/decimation/"
-	}
+}
 	
 @article{WT_failures_paper,
 	title = {15000 accidents and incidents on UK wind farms},
@@ -80,7 +85,7 @@
 	Journal = "Telegraph",
 	author = "Edward Malnick, Robert Mendick",
 	Url = "https://www.telegraph.co.uk/news/uknews/8948363/1500-accidents-and-incidents-on-UK-wind-farms.html"
-	}
+}
 
 @article{NSET_vibration_modeling,
 	title = {Wind Turbine Tower Vibration Modeling and Monitoring by the Nonlinear State Estimation Technique (NSET)},
@@ -88,14 +93,14 @@
 	Journal = "MDPI",
 	author = "Peng Guo, David Infield",
 	Url = "http://www.mdpi.com/1996-1073/5/12/5279/pdf"
-	}
+}
 	
 @article{data_driven_online_monitoring,
 	title = {Data Driven Online Monitoring of Wind Turbines},
 	year = "2016",
 	author = "Thomas Kenbeek, Stella Kapodistria, Alessandro Di Bucchianico",
 	Url = "https://arxiv.org/pdf/1702.05047.pdf"
-	}
+}
 	
 @article{wind_turbine_failures,
 	title = {Wind Turbine Failures - Tackling current Problems in Failure Data Analysis},
@@ -103,7 +108,7 @@
 	Journal = "Journal of Physics Conference Series",
 	author = "Maik Reder, Julio Melero, Elena Gonzalez",
 	Url = "https://www.researchgate.net/publication/308807866_Wind_Turbine_Failures_-_Tackling_current_Problems_in_Failure_Data_Analysis"
-	}
+}
 	
 @article{embedded_zoom_fft,
 	title = {Using Zoom FFT for spectral analysis},
@@ -111,7 +116,7 @@
 	Journal = "Embedded",
 	author = "Richard Lyons",
 	Url = "https://www.embedded.com/design/other/4213370/Using-Zoom-FFT-for-spectral-analysis"
-	}
+}
 	
 @article{embedded_goertzel,
 	title = {The Goertzel Algorithm},
@@ -119,14 +124,14 @@
 	Journal = "Embedded",
 	author = "Kevin Banks",
 	Url = "https://www.embedded.com/design/configurable-systems/4024443/The-Goertzel-Algorithm"
-	}
+}
 	
 @article{berkeley_goertzel,
 	title = {Goertzel Algorithm},
 	Journal = "Berkeley",
 	author = "Brian Evans",
 	Url = "https://ptolemy.berkeley.edu/papers/96/dtmf_ict/www/node3.html"
-	}
+}
 	
 @article{TI_goertzel,
 	title = {Modified Goertzel Algorithm in DTMF Detection Using the TMS320C80},
@@ -134,14 +139,19 @@
 	year = "1996",
 	author = "Texas Instruments",
 	Url = "https://ptolemy.berkeley.edu/papers/96/dtmf_ict/www/node3.html"
-	}				
-
-@article{wiki_DFT,
-	title = {Discrete Fourier Transform},
-	year = 2019,
-	Url = "https://en.wikipedia.org/wiki/Discrete_Fourier_transform"
 }
-	
+
+@article{winograd1976computing,
+	title={On computing the discrete Fourier transform},
+	author={Winograd, Shmuel},
+	journal={Proceedings of the National Academy of Sciences},
+	volume={73},
+	number={4},
+	pages={1005--1006},
+	year={1976},
+	publisher={National Acad Sciences}
+}
+
 @article{draw_io,
 	title = {Draw.io},
 	year = 2019,
@@ -150,21 +160,24 @@
 
 @article{flops_performance,
 	title = {A simple benchmark of various math operations},
+	author = {Lincoln Atkinson},
 	year = 2014,
 	Url = "http://www.latkin.org/blog/2014/11/09/a-simple-benchmark-of-various-math-operations/"
 }
 
-@article{wiki_fft,
-	title = {Fast Fourier Transform},
-	year = 2019,
-	Url = "https://en.wikipedia.org/wiki/Fast_Fourier_transform"
-	}
+@book{nussbaumer2012fast,
+	title={Fast Fourier transform and convolution algorithms},
+	author={Nussbaumer, Henri J},
+	volume={2},
+	year={2012},
+	publisher={Springer Science \& Business Media}
+}
 
 @article{stm32_floating_point,
 	title = {Floating point unit demonstration on STM32 microcontrollers},
 	year = 2016,
 	Url = "https://www.st.com/content/ccc/resource/technical/document/application_note/10/6b/dc/ea/5b/6e/47/46/DM00047230.pdf/files/DM00047230.pdf/jcr:content/translations/en.DM00047230.pdf",
-	author = ST
+	author = {ST}
 	}
 	
 @book{butter_filter_design,
@@ -179,14 +192,14 @@
 	title = {K-Nearest Neighbors Algorithm Using Python},
 	year = 2019,
 	Url = "https://www.edureka.co/blog/k-nearest-neighbors-algorithm/",
-	author = Atul
+	author = {Atul}
 	}
 	
 @article{confusion_matrix,
 	title = {Simple guide to confusion matrix terminology},
 	year = 2014,
 	Url = "https://www.dataschool.io/simple-guide-to-confusion-matrix-terminology/",
-	author = DataSchool
+	author = {DataSchool}
 	}
 	
 @article{gradient_descent,
@@ -195,14 +208,19 @@
 	Url = "https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html",
 	author = {ML Cheatsheet}
 	}	
-		
-@article{finite_difference_method,
-	title = {Finite Difference Method},
-	year = 2019,
-	Url = "http://www.scholarpedia.org/article/Finite_difference_method",
-	author = {Finite difference method}
-	}
 
+@ARTICLE{finite_difference_method,
+	AUTHOR = {Fornberg, B. },
+	TITLE   = {{F}inite difference method},
+	YEAR    = {2011},
+	JOURNAL = {Scholarpedia},
+	VOLUME  = {6},
+	NUMBER  = {10},
+	PAGES   = {9685},
+	DOI     = {10.4249/scholarpedia.9685},
+	NOTE    = {revision \#121475}
+}
+	
 @article{wind_turbine_accidents,
 	author = {Asian, Sean and Ertek, Gurdal and Haksoz, Cagri and Pakter, Sena and Ulun,, Soner},
 	year = {2017},
@@ -245,3 +263,17 @@
 	title = {TensorFlow},
 	url = "https://www.tensorflow.org/"
 }	
+
+@article{MATLAB_blackman,
+	author = {MathWorks},
+	year = {2019},
+	title = {Blackman window},
+	url = "https://www.mathworks.com/help/signal/ref/blackman.html"
+}	
+
+@article{puschel2007algebraic,
+	title={Algebraic signal processing theory: Cooley-Tukey type algorithms for DCTs and DSTs},
+	author={P{\"u}schel, Markus and Moura, Jos{\'e} MF},
+	journal={arXiv preprint cs/0702025},
+	year={2007}
+}
