update some post-defense changes

--- a/LaTeX/thesis-template-master/main.tex
+++ b/LaTeX/thesis-template-master/main.tex
@@ -168,11 +168,11 @@
 \makeatother
 
 % Hack to make Appendices to appear in Table of Contents
-%\addtocontents{toc}{%
-%   \noindent APPENDICES
-%}
-%\begin{appendices}
-%\input{appendix-outline}
-%\end{appendices}
+\addtocontents{toc}{%
+   \noindent APPENDICES
+}
+\begin{appendices}
+\input{appendix-outline}
+\end{appendices}
 
 \end{document}
