--- a/LaTeX/thesis-template-master/bibliography.bib
+++ b/LaTeX/thesis-template-master/bibliography.bib
@@ -277,3 +277,9 @@
 	journal={arXiv preprint cs/0702025},
 	year={2007}
 }
+
+@article{george2013transient,
+  title={Transient Small Wind Turbine Tower Structural Analysis with Coupled Rotor Dynamic Interaction},
+  author={George, R and others},
+  year={2013}
+}
