grammer fixes for report

--- a/LaTeX/thesis-template-master/main.tex
+++ b/LaTeX/thesis-template-master/main.tex
@@ -31,7 +31,7 @@
 \usepackage{placeins}
 \usepackage[tableposition=top]{caption}
 \usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
-
+\usepackage{needspace}
 
 % ------------- Define new commands -------------------------
 \newcommand{\keyword}[1]{\textbf{#1}}
